fix: update text alignment and font sizes in _sass files for improved layout
- Centered text alignment for card titles, hero headings, and descriptions.
- Adjusted font sizes for hero elements and navigation links for better readability.
- Added justification for card descriptions to enhance text presentation.

--- a/_sass/partials/_cards.scss
+++ b/_sass/partials/_cards.scss
@@ -88,7 +88,7 @@
 }
 
 .card-title {
-  text-align: left;
+  text-align: center;
   font-size: 1.35rem;
   color: #fff;
   font-weight: 800;
@@ -104,6 +104,7 @@
 
 .card-description {
   font-size: 0.9rem;
+  text-align: justify;
   color: #aaa;
   margin-bottom: 0rem;
   line-height: 1.4;
